2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 523562 - gtk-update-icon-cache core dumps when run concurrently and
	when options are missing

	* gtk/updateiconcache.c: Open the cache file (O_CREAT | O_EXCL) so
	that other processes that try to open it will fail gracefully.  Also
	fix a crasher caused by lack of a NULL check.  Report and patch
	by Erwann Chenede.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 526635 - _gdk_window_get_toplevel handles FOREIGN windows

	* gdk/x11/gdkwindow-x11.c (_gdk_window_get_toplevel): Check
	!WINDOW_IS_TOPLEVEL instead of checking for GDK_WINDOW_CHILD,
	so that we also take into account for foreign windows.
	Report and patch by Nathaniel Smith.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 524110 - Gdk should not assume reparenting WMs when retrieving
	window frame extents

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_frame_extents):
	Use _NET_FRAME_EXTENTS, if available.  Patch by Danny Baumann.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 522269 - Evince windows sometimes incorrectly unmaximized,
	caused by missing flag initialization

	* gdk/x11/gdkwindow-x11.c (set_initial_hints): Initialize
	top-level private flags correctly.  Patch by Danny Baumann.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	Bug 534463 - non-editable GtkTextView should not call
	gtk_im_context_focus_in in focus event

	* gtk/gtktextview.c: Add checks to see if the textview is
	editable.  Patch by Wang Diancheng.

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	* gtk/gtkfilechooserdefault.c: (create_file_list): Add GDK_ACTION_MOVE
	to the drag actions to allow trash (#137717).

2008-06-02  Matthias Clasen <mclasen@redhat.com> 

	Merge from trunk:

	* gtk/gtksearchenginetracker.c: (_gtk_search_engine_tracker_new):
	check that tracker is actually working before using it. Fixes